# File: BUILD

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Interface Library
cc_library(
    name = "gfxstream_utils_headers",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//common/vulkan:gfxstream_vulkan_headers",
        "//third-party/renderdoc",
        "@aemu//base:aemu-base-headers",
        "@aemu//host-common:aemu-host-common-headers",
    ],
)

cc_library(
    name = "gfxstream_utils",
    srcs = ["GfxApiLogger.cpp"],
    copts = ["-fno-exceptions"],
    visibility = ["//visibility:public"],
    deps = [":gfxstream_utils_headers"],
)

# Conditional Executable (Test target)
cc_test(
    name = "gfxstream_utils_unittests",
    srcs = [
        "GfxApiLogger_unittest.cpp",
        "RenderDoc_unittest.cpp",
    ],
    deps = [
        ":gfxstream_utils",
        "@aemu//base:aemu-base",
        "@com_google_googletest//:gtest_main",
    ],
)
