# Header Library
cc_library(
    name = "gfxstream_common_utils_headers",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)

# Code Library
cc_library(
    name = "gfxstream_common_utils",
    srcs = ["Strings.cpp"],
    visibility = ["//visibility:public"],
    deps = [":gfxstream_common_utils_headers"],
)
