# File: project_root/src/apigen-codec-common/BUILD

cc_library(
    name = "apigen-codec-common",
    srcs = [
        "ChecksumCalculator.cpp",
        "ChecksumCalculator.h",
        "ChecksumCalculatorThreadInfo.cpp",
        "ChecksumCalculatorThreadInfo.h",
        "glUtils.cpp",
        "glUtils.h",
    ] + select({
        "@platforms//os:linux": [
            "X11Support.cpp",
            "X11Support.h",
        ],
        "//conditions:default": [],
    }),
    hdrs = glob([
        "GL/**/*.h",
        "X11/**/*.h",
    ]) + [
        "GLDecoderContextData.h",
        "ProtocolUtils.h",
        "gl_base_types.h",
    ],
    copts = ["-fno-exceptions"],
    defines = [
        "EMUGL_BUILD",
        "BUILDING_EMUGL_COMMON_SHARED",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "//hardware/google/aemu/base:aemu-base-headers",
        "//hardware/google/aemu/host-common:aemu-host-common",
        "//hardware/google/gfxstream:gfxstream-gl-host-common-headers",
    ],
)
